Closed Bug 1755659 Opened 4 years ago Closed 8 months ago

"Mark" -> "All read" affects news messages that have not been fetched yet

Categories

(MailNews Core :: Networking: NNTP, defect)

Thunderbird 91
Desktop
All
defect

Tracking

(thunderbird_esr91 wontfix, thunderbird99 wontfix, thunderbird100 wontfix, thunderbird_esr128 wontfix, thunderbird_esr140 wontfix, thunderbird140 wontfix, thunderbird141 wontfix)

RESOLVED FIXED
142 Branch
Tracking Status
thunderbird_esr91 --- wontfix
thunderbird99 --- wontfix
thunderbird100 --- wontfix
thunderbird_esr128 --- wontfix
thunderbird_esr140 --- wontfix
thunderbird140 --- wontfix
thunderbird141 --- wontfix

People

(Reporter: manikulin, Assigned: welpy-cw)

Details

Attachments

(2 files)

Steps to reproduce:

I was filing the Bug #1755271 and decided that "Get Next X news messages" does not work in thunderbird-91. Actually only counter of total messages was increasing, but I was watching counter for unread messages. The problem is reproducible for thunderbird-99a1 build as well.

  • Subscribe to some active news group, e.g. gmane.emacs.devel on news.gmane.io
  • Fetch some limited number of messages, default 500 is OK.
  • Try "Get Next 500 News Messages" to see that additional messages are fetched in unread state
  • Do "Mark" -> "All read" or "Mark newsgroup read"
  • Fetch next bunch of older messages

Actual results:

If mark all read has been ever used for some newsgroup then "Get Next X News Messages" adds older messages as already read ones.

Expected results:

Messages fetched using "Get Next X News Messages" are always appear as unread ones.

Component: Untriaged → Networking: NNTP
Product: Thunderbird → MailNews Core

Walt, can you reproduce?

Flags: needinfo?(wls220spring)

(In reply to Wayne Mery (:wsmwk) from comment #1)

Walt, can you reproduce?

Yes, tested using 91.7.0 on Fedora with my news.gmane.io account only test profile.

Flags: needinfo?(wls220spring)

(In reply to WaltS48 [:walts48] from comment #2)

(In reply to Wayne Mery (:wsmwk) from comment #1)

Walt, can you reproduce?

Yes, tested using 91.7.0 on Fedora with my news.gmane.io account only test profile.

Does it mean that this bug should not be in the "UNCONFIRMED" state any more?

(In reply to max from comment #3)

(In reply to WaltS48 [:walts48] from comment #2)

(In reply to Wayne Mery (:wsmwk) from comment #1)

Walt, can you reproduce?

Yes, tested using 91.7.0 on Fedora with my news.gmane.io account only test profile.

Does it mean that this bug should not be in the "UNCONFIRMED" state any more?

I should probably test with my other 3 news accounts and 8 groups on Fedora and Windows first.

I can reproduce with my other accounts and their groups using Thunderbird 91.7.0 on Windows 10.

Status: UNCONFIRMED → NEW
Ever confirmed: true
OS: Unspecified → All
Hardware: Unspecified → x86_64

Apparently this has never been used since it had been introduced in the last century.

Attachment #9496693 - Attachment description: WIP: Bug 1755659 - Refactor nsNewsDatabase::MarkAllRead. → WIP: Bug 1755659 - Fix Mark All Read for newsgroups. r=#thunderbird-reviewers
Assignee: nobody → h.w.forms
Attachment #9496752 - Attachment description: WIP: Bug 1755659 - Remove unused nsIDBFolderInfo::expiredMark and associated code. r=#thunderbird-reviewers → Bug 1755659 - Remove unused nsIDBFolderInfo::expiredMark and associated code. r=#thunderbird-reviewers
Status: NEW → ASSIGNED
Attachment #9496693 - Attachment description: WIP: Bug 1755659 - Fix Mark All Read for newsgroups. r=#thunderbird-reviewers → Bug 1755659 - Fix Mark All Read for newsgroups. r=#thunderbird-reviewers

Pushed by kaie@kuix.de:
https://hg.mozilla.org/comm-central/rev/6042294f13b5
Remove unused nsIDBFolderInfo::expiredMark and associated code. r=mkmelin
https://hg.mozilla.org/comm-central/rev/c0af18de5ae9
Fix Mark All Read for newsgroups. r=mkmelin

Status: ASSIGNED → RESOLVED
Closed: 8 months ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: