Bug 1755659 - Remove unused nsIDBFolderInfo::expiredMark and associated code. r=mkmelin

Apparently this has never been used since it had been introduced in the last century.

Differential Revision: https://phabricator.services.mozilla.com/D254977

--HG--
extra : amend_source : c736bb17fc665fe25105e5b6ca84e184eac6b8dd